--- a/package.json
+++ b/package.json
@@ -6,8 +6,12 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
+    "framer": "^2.1.1",
+    "framer-motion": "^6.2.9",
+    "motion": "^10.7.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "react-intersection-observer": "^8.33.1",
     "react-scripts": "5.0.0",
     "web-vitals": "^2.1.4"
   },
